# Rinne

./: .gitignore  CONTEXT.md  Cargo.toml  LICENSE  PHASE.md  README.md  SECURITY.md  install.sh
.github/: release.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pr-label.yml  release.yml
crates/rinne-cli/: Cargo.toml
crates/rinne-cli/src/: cli.rs  main.rs  telemetry.rs  update.rs
crates/rinne-cli/src/commands/: config.rs  doctor.rs  models.rs  run.rs
crates/rinne-cli/src/tui/: complete.rs  markdown.rs  mod.rs  ui.rs
crates/rinne-conductor/: Cargo.toml
crates/rinne-conductor/src/: backend.rs  conductor.rs  lib.rs  prompt.rs
crates/rinne-config/: Cargo.toml
crates/rinne-config/src/: cache.rs  known.rs  lib.rs  model.rs  paths.rs  secrets.rs  update.rs  write.rs
crates/rinne-config/src/probe/: registry.rs
crates/rinne-core/: Cargo.toml
crates/rinne-core/src/: assembler.rs  dag.rs  error.rs  evaluator.rs  lib.rs  registry.rs  replanner.rs  state.rs
crates/rinne-core/src/worker/: descriptor.rs  exec.rs  mod.rs
crates/rinne-workers/: Cargo.toml
crates/rinne-workers/src/: mock.rs
crates/rinne-workers/src/adapters/: aider.rs  claude_code.rs  codex.rs  common.rs  cursor.rs  opencode.rs
crates/rinne-workers/tests/: mock_worker.rs
examples/: hello-plan.json
