[package]
name = "rinne"
description = "Local, terminal-first AI orchestration: plan work into a DAG and drive it across AI coding CLIs and model APIs through a verifying loop."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
# The published binary is `rinne`; install with `cargo install rinne`.
default-run = "rinne"

[[bin]]
name = "rinne"
path = "src/main.rs"

[dependencies]
rinne-core.workspace = true
rinne-config.workspace = true
rinne-workers.workspace = true
rinne-conductor.workspace = true

clap.workspace = true
tokio.workspace = true
toml.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
ratatui.workspace = true
crossterm = { workspace = true, features = ["event-stream"] }
nucleo.workspace = true
notify.workspace = true
futures-util = "0.3"
glob = "0.3"

[dev-dependencies]
tokio-util.workspace = true
serde_json.workspace = true
async-trait.workspace = true
