[package]
name = "rinne-conductor"
description = "Prompted planning, plan parsing, and conductor backends (OpenAI-compatible + harness) for Rinne, the local AI orchestration tool."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rinne-core.workspace = true
rinne-workers.workspace = true
rinne-config.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
