[package]
name = "rinne-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rinne-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit = "0.22"
figment.workspace = true
directories.workspace = true
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
