[package]
name = "rinne-config"
description = "Layered configuration, worker/provider catalogs, doctor probing, and OS-keychain secrets for Rinne, the local AI orchestration tool."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rinne-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit = "0.22"
figment.workspace = true
directories.workspace = true
reqwest.workspace = true
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
