[package]
name = "rinne-core"
description = "Core loop engine, plan/DAG model, blackboard, and worker contract for Rinne, the local AI orchestration tool."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
futures-util = "0.3"
rusqlite.workspace = true
